--- a/WebTest/Dockerfile
+++ b/WebTest/Dockerfile
@@ -9,3 +9,4 @@ FROM madmanfred/qt-webassembly
 COPY --from=boost-stage /boost/ /emsdk_portable/sdk/system/include/boost/
 COPY --from=opencv-stage /usr/local/include/opencv4/opencv2/ /emsdk_portable/sdk/system/include/opencv2/
 COPY --from=opencv-stage /src/opencv/static_wasm/lib/ /opencv/static_wasm/lib/
+RUN apt update -y && apt upgrade -y && apt install -y python3
